--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Crazy Weather App</title>
+    <title>Weather Forcast App</title>
   </head>
   <body class="bg-slate-950">
     <div id="root"></div>
